k8s/environment/overlays/production/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nova-production
  labels:
    goldilocks.fairwinds.com/enabled: "true"
